--- a/ConsoleApp1.csproj
+++ b/ConsoleApp1.csproj
@@ -5,12 +5,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="KubernetesClient" Version="8.0.68" />
     <PackageReference Include="KubernetesClient.Basic" Version="8.0.68" />
     <PackageReference Include="KubernetesClient.Models" Version="8.0.68" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
   </ItemGroup>
 
 
